--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	  <li><a href = "index.html">Home</a></li>
 	  <li><a href = "about.html">About Us</a></li>
 	  <li><a href = "services.html">Services</a></li>
-	  <li><a href = "contact.html">Contact Us</a></li>
+	  <li><a href = "contact.html">Reviews</a></li>
 	</ul>
 </nav> 
 	 
@@ -61,11 +61,7 @@
 <figure>
   <img src = "images/concord.jpg" alt = "Jordan Concord Shoe"  />
 
-  <figcaption>
-    <br />
-    
-  </figcaption> 
-</figure>
+
 
 </aside>   
 
@@ -73,7 +69,7 @@
 
 	<p>SoleXchange<br />
 	555 Filet Street &bull; Dallas, TX 75067<br />
-	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "#">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
+	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "https://www.google.com/maps" target=_blank" >Directions </a> |<a href ="tel: +4691234567">(469)-123-4567</a> | <a href = "mailto:solexchange@gmail.com">Email Us</a></p>
 
 </footer>  
 
